# doppelganger

./: NOTICE  README.md  RESEARCH.md  V0.1-CRITERIA.md  output.md  pyproject.toml  test-output.txt
src/doppelganger/: __init__.py  cli.py  client.py  engine.py  findings.py  h2c.py  h2engine.py  h2send.py  h2techniques.py  rawsend.py  reporting.py  sarif.py  techniques.py
tests/: conftest.py  h2mock.py  mockpair.py  test_chunk_techniques.py  test_cli.py  test_engine.py  test_expect_probe.py  test_findings.py  test_h2_integration.py  test_h2_pseudohdr.py  test_h2c.py  test_h2engine.py  test_h2send.py  test_integration_lab.py  test_rawsend.py  test_retries.py  test_summary.py  test_target_file.py  test_wheel_ship_gate.py
tests/lab/: docker-compose.yml  haproxy.cfg
tests/lab/backend/: app.py
